# realtimeodds-python

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: README.md  line_move_alerts.py
src/realtimeodds/: __init__.py  _book.py  _emitter.py  _id_helper.py  _types.py  client.py  id_helper.py
src/realtimeodds/_entities/: __init__.py  market.py  order_book.py  quote.py  selection.py  sport_event.py
src/realtimeodds/_gateway/: __init__.py  client.py  protocol.py  reconnect.py
src/realtimeodds/_store/: __init__.py  events.py  odds_store.py
tests/: test_book.py  test_contract_spec.py  test_entities.py  test_protocol.py  test_reconnect.py  test_store.py
